--- a/src/styles/Elevator.css
+++ b/src/styles/Elevator.css
@@ -35,16 +35,18 @@ h1 {
 
 .elevator {
   width: 255px;
-  height: 450px;
-  background-image: url('../../public/elevadorimg.png');
+  height: 380px;
+  /* background-image: url('../../public/dooropen.jpg'); */
   background-position: center;
   background-repeat: no-repeat;
+  background-size: contain; /* Ajusta o tamanho da imagem */
   position: absolute;
   bottom: 36px;
   border-radius: 15px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-  transition: transform 1s ease-in-out;
-  right: -55px;
+  transition: transform 0.3s ease-in-out, background-image 0.3s ease-in-out;
+  /* right: -55px; */
+  border: solid;
 }
 
 .button-container {
@@ -112,12 +114,14 @@ p {
   font-size: 1.5rem;
   line-height: 1.6;
   color: #444;
-  text-align: justify;
+  /* text-align: justify; */
   margin: 15px 0;
   padding: 10px;
-  border-left: 4px solid #555;
+  border-left: 4px solid black;
+  border-right: 4px solid black;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
   transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  border-radius: 15px;
 }
 
 p:hover {
@@ -129,3 +133,18 @@ p:active {
   color: #000;
   transform: scale(0.98);
 }
+
+@media (max-width: 1025px) {
+  .elevator {
+    width: 215px;
+    height: 325px;
+}
+}
+
+@media (max-width: 769px) {
+  .elevator {
+    width: 170px;
+    height: 250px;
+}
+}
+
