--- a/src/styles/Elevator.css
+++ b/src/styles/Elevator.css
@@ -11,9 +11,20 @@ h1 {
   text-align: center;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   margin: 20px 0;
-  border-bottom: 3px solid #444;
+  /* border-bottom: 3px solid #444; */
   padding-bottom: 10px;
   transition: color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
+  transform: translateX(-23%);
+}
+
+.underline {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  font-weight: bold;
+  letter-spacing: 15px;
+  border-bottom: solid;
 }
 
 .elevator-title {
